🐛 Fix using JEI internals in JEI_INFORMATION, remove JEI compile dep